# infra-controller

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile-package.toml  Makefile.toml  STYLE_GUIDE.md  skaffold.yml
.github/workflows/: ci.yaml  fern-docs-ci.yml  notify-build-status.yml  rest-build-binaries.yml  rest-build-push-docker.yml  rest-build-push-service.yml  rest-ci.yml  rest-helm-workflows.yml  rest-lint-and-test.yml  rest-prepare-build-info.yml
bluefield/: Makefile.toml
bluefield/otel/: ocb_url.txt
crates/admin-cli/: Cargo.toml  cli_domains.yaml
crates/api/: Cargo.toml
crates/api-core/: Cargo.toml
crates/api-integration-tests/: Cargo.toml
crates/api-model/: Cargo.toml
crates/api-web/: Cargo.toml
crates/bmc-mock/: Cargo.toml
crates/bmc-proxy/: Cargo.toml
crates/component-manager/: Cargo.toml
crates/dns/: Cargo.toml
crates/dpf/: Makefile.toml
crates/firmware/: Cargo.toml
crates/health/: Cargo.toml  build.rs
crates/kms-provider/: Cargo.toml
crates/libmlx/: Cargo.toml
crates/libnmxc/: Cargo.toml  build.rs
crates/libnmxc/tests/: Cargo.toml  hello.rs
crates/libnmxc/tests/src/: main.rs
crates/libnmxm/: Cargo.toml
crates/machine-controller/: Cargo.toml
crates/macros/: Cargo.toml
crates/nras/: Cargo.toml
docs/: development.md  faq.md  glossary.md  index.yml  release-notes.md
fern/: docs.yml
helm/: PREREQUISITES.md  README.md  values.yaml
helm-prereqs/: README.md  preflight.sh  setup.sh
pxe/: Makefile.toml
rest-api/: .golangci.yml  AGENTS.md  Makefile  README.md  go.mod  go.sum
scripts/: check-aarch64-pagesize.sh
(+1312 files in other folders)
